--- a/nginx-statefulset.yaml
+++ b/nginx-statefulset.yaml
@@ -30,3 +30,30 @@ spec:
       resources:
         requests:
           storage: 1Gi
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
+  clusterIP: None 
+  selector:
+    app: myapp
+  ports:
+  - port: 80
+    name: web
+    targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mystatefulset-service
+spec:
+  type: NodePort
+  selector:
+    statefulset.kubernetes.io/pod-name: mystatefulset-0
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30080
